# OrbiSim

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build_test.yml
include/: CelestialBody.hpp  FixedCelestialBody.hpp  MovingCelestialBody.hpp  OrbiSimConfig.h.in  celestial_body.hpp  main_window.h  moving_celestial_body.hpp
src/: CelestialBody.cpp  FixedCelestialBody.cpp  MovingCelestialBody.cpp  celestial_body.cpp  main.cpp  main_window.cpp  moving_celestial_body.cpp
